# urlchecker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.qrc
libs/: CMakeLists.txt
libs/my/: CMakeLists.txt
libs/my/include/: CMakeLists.txt
libs/my/include/my/: browserutils.h  file.h  httpclient.h  httpproxy.h  proxymanager.h  proxyutils.h  random.h  text.h  urlutils.h  useragents.h
libs/my/my/: CMakeLists.txt  file.cpp  httpclient.cpp  httpproxy.cpp  proxymanager.cpp  proxyutils.cpp  random.cpp  text.cpp  urlutils.cpp
src/: CMakeLists.txt  file.cpp  file.h  main.cpp  mainwindow.cpp  mainwindow.h  table.cpp  table.h  version.h
src/application/: actions.cpp  actions.h  applicationstate.cpp  applicationstate.h  config.h  constants.h  file.cpp  file.h  httpclient.cpp  httpclient.h  icons.h  mainwindow.cpp  mainwindow.h  recentfiles.cpp  recentfiles.h  sidebar.cpp  sidebar.h  table.cpp  table.h  texts.h  toolswidget.cpp  toolswidget.h  useragents.cpp  useragents.h  version.h
src/application/common/: applicationstate.h  applicationstatemachine.cpp  applicationstatemachine.h  basemainwindow.cpp  basemainwindow.h  recentfiles.cpp  recentfiles.h  settings.cpp  settings.h  table.cpp  table.h  thread.cpp
src/application/core/: actionsmanager.cpp  actionsmanager.h  applicationbridge.cpp  applicationbridge.h  applicationstatemachine.cpp  applicationstatemachine.h  basemainwindow.cpp  enumbitmask.h  helpbrowser.cpp  helpwidget.cpp  helpwidget.h  init.cpp  init.h  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  proxieswidget.cpp  proxieswidget.h  recentfiles.cpp  recentfiles.h  resultstatus.h  settings.cpp  settings.h  settingswidget.cpp  settingswidget.h  sidebar.cpp  sidebar.h  table.cpp  table.h  thread.cpp  thread.h  tool.cpp  tool.h  tools.h  toolsmanager.cpp  toolsmanager.h  toolswidget.cpp  toolswidget.h  worker.cpp  (+5 more)
src/application/data/: useragents.h
src/application/tools/: proxytools.cpp  proxytools.h  ranktools.cpp  ranktools.h  tool.cpp  tool.h  tools.h  workerfactory.cpp  workerfactory.h
src/application/tools/alexarank/: alexaranktool.cpp  alexaranktool.h  checkalexarankworker.cpp  checkalexarankworker.h  utilities.cpp  utilities.h
src/application/tools/checksearchengineindex/: checksearchengineindextool.cpp  checksearchengineindextool.h  checksearchengineindexworker.cpp  checksearchengineindexworker.h  utilities.cpp  utilities.h
src/application/tools/dummy/: dummytool.cpp  dummytool.h  dummyworker.cpp  dummyworker.h
src/application/tools/scrapeemails/: scrapeemailsstool.h  scrapeemailstool.cpp  scrapeemailsworker.cpp  scrapeemailsworker.h  utilities.cpp  utilities.h
src/application/tools/scrapehtml/: common.h  settings.ui  settingspage.cpp  settingspage.h  tool.cpp  tool.h  worker.cpp  worker.h
src/application/tools/scrapeimages/: common.h  scrapeimagessettings.ui  scrapeimagessettingspage.cpp  scrapeimagessettingspage.h  scrapeimagestool.cpp  scrapeimagestool.h  scrapeimagesworker.cpp  scrapeimagesworker.h
src/application/tools/scrapelinks/: common.h  scrapelinkssettings.ui  scrapelinkssettingspage.cpp  scrapelinkssettingspage.h  scrapelinkstool.cpp  scrapelinkstool.h  scrapelinksworker.cpp  scrapelinksworker.h  utilities.cpp
src/application/tools/scrapemeta/: tool.cpp  tool.h  worker.cpp  worker.h
src/application/tools/scrapephonenumbers/: scrapephonenumberstool.cpp  scrapephonenumberstool.h  scrapephonenumbersworker.cpp  scrapephonenumbersworker.h  utilities.cpp  utilities.h
src/application/tools/scrapeproxies/: scrapeproxiestool.cpp  scrapeproxiestool.h  scrapeproxiesworker.cpp  scrapeproxiesworker.h  utilities.cpp
src/application/tools/scrapesitemaps/: common.h  scrapesitemapssettings.ui  scrapesitemapssettingspage.cpp  scrapesitemapssettingspage.h  scrapesitemapstool.cpp  utilities.h  (+4 more)
src/application/utils/: httpclient.cpp  httpproxy.cpp  httpproxy.h  misc.cpp  misc.h  proxymanager.cpp  proxymanager.h  rand.cpp  rand.h  requests.cpp  requests.h  simpledom.cpp  simpledom.h  text.cpp  text.h  tidyhtml.cpp  tidyhtml.h  useragents.cpp  useragentsmanager.h
src/application/widgets/: filesystemwidget.cpp  filesystemwidget.h  helpbrowser.cpp  helpbrowser.h  helpwidget.cpp  helpwidget.h  logwidget.cpp  logwidget.h  mainwindowbase.cpp  mainwindowbase.h  proxieswidget.cpp  proxieswidget.h  settingswidget.cpp  settingswidget.h  sidebarwidget.cpp  sidebarwidget.h  statusbarwidget.cpp  statusbarwidget.h  tableswidget.cpp  tableswidget.h  toolswidget.cpp  toolswidget.h  useragentswidget.cpp  useragentswidget.h  workspacewidget.cpp  workspacewidget.h
src/application/workers/: checkalexarank.cpp  checkalexarank.h  checkurlstatusworker.cpp  checkurlstatusworker.h  dummyworker.cpp  dummyworker.h  resultstatus.h  scrapeproxies.cpp  scrapeproxies.h  testworker.cpp  testworker.h  worker.cpp  worker.h  workerfactory.cpp  workerfactory.h
src/common/: csvwriter.cpp  csvwriter.h  file.cpp  file.h  httpproxy.cpp  httpproxy.h  proxymanager.cpp  proxymanager.h  proxyutils.cpp  proxyutils.h  random.cpp  random.h  text.cpp  text.h  urlutils.cpp  urlutils.h  useragentmanager.cpp  useragentmanager.h
src/data/: useragents.h
tests/: CMakeLists.txt  catchmain.cpp  testmisc.cpp  testproxy.cpp  testproxymanager.cpp  testproxytools.cpp  testrand.cpp  testranktools.cpp  testrequests.cpp  tests.cpp  testuseragentsmanager.cpp
tests/common/: CMakeLists.txt  test_proxymanager.cpp  test_random.cpp
tests/core/: CMakeLists.txt  test_httpproxy.cpp  test_settings.cpp  test_toolsmanager.cpp  test_useragentmanager.cpp
tests/core/data/: settings.json
tests/misc/: CMakeLists.txt  testproxymanager.cpp  testproxytools.cpp  testuseragentsmanager.cpp
tests/misc/data/: bad_urls.txt
tests/tools/: CMakeLists.txt  test_alexarank.cpp  test_scrapeproxies.cpp
tests/widgets/: CMakeLists.txt  main.cpp  test_logwidget.cpp  test_logwidget.h  test_proxieswidget.cpp  test_proxieswidget.h  test_sidebarwidget.cpp  test_sidebarwidget.h  test_statusbarwidget.cpp  test_statusbarwidget.h  test_toolswidget.cpp  test_toolswidget.h  test_useragentswidget.cpp  test_useragentswidget.h
(+30 files in other folders)
